--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^3.0.1
+  get: ^4.6.5
+  http: ^0.13.5
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
