--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   carousel_slider: ^4.1.1
   intl: ^0.17.0
+  syncfusion_flutter_charts: ^20.3.48
 
 dev_dependencies:
   flutter_test:
